--- a/L03_CSS_Basics/task2/css/style.css
+++ b/L03_CSS_Basics/task2/css/style.css
@@ -5,7 +5,7 @@
 .gl_locations{
     margin: 50px;
     text-align: center;
-    color: black;
+    color: #303030;
     font-family: sans-serif;
 }
 
