--- a/L04_Responsive/task/css/style.css
+++ b/L04_Responsive/task/css/style.css
@@ -3,7 +3,7 @@
 	padding: 0;
 	margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px/1.2;
+    font-size: 14px;
 }
 
 a{
@@ -27,7 +27,7 @@ li{
     box-sizing: border-box;
     margin: auto;
     max-width: 900px;
-    padding: 20px 0 20px 15px;
+    padding: 10px 0 20px 15px;
 }
 
 .epam{
@@ -290,7 +290,6 @@ footer{
     text-align: center;
     font-weight: lighter;
     max-width: 550px;
-    padding-left: 0x;
 }
 
 .main_block{
@@ -310,7 +309,7 @@ footer{
     text-align: left;
     background: #ccc;
     padding: 10px;
-    height: 280px;
+    height: 290px;
     width: 47%;
     margin: 7px;
 }
@@ -385,6 +384,17 @@ footer{
 }
 
 
+@media screen and (max-width: 800px){
+.block{
+    height: 270px;
+}
+}
+
+@media screen and (max-width: 610px){
+.block{
+    height: 250px;
+}
+}
 
 
 @media screen and (max-width: 557px){
@@ -476,7 +486,6 @@ border-bottom: 1px solid #464547;
     width: 90%;
     text-align: left;
     max-width: 550px;
-    padding-left: 0x;
 }
 
 .main_block{
@@ -577,6 +586,11 @@ footer{
 @media screen and (max-width: 353px){
 .header_logo_inside{
     padding-top: 165px;
+}
+
+.img_wrapper{
+
+    height: 100%;
 }
 }
 
