--- a/L04_Responsive/task/css/style.css
+++ b/L04_Responsive/task/css/style.css
@@ -406,11 +406,12 @@ footer{
     text-align: center;
     height: 172px;
     padding: 0;
+    width: 100%;
 }
 
 .img_wrapper img{
     position: static;
-    max-width: 320px;
+    max-width: 100%;
 }
 
 .block_desc{
@@ -446,7 +447,7 @@ footer{
 }
 
 .img_wrapper{
-    height: 100%;
+    height: 150px;
 }
 }
 /* media screen 353px end */
@@ -457,9 +458,5 @@ footer{
     padding-top: 145px;
 }
     
-.img_wrapper{
-
-    height: 100%;
-}
 }
 /* media screen 287px end */
