--- a/L04_Responsive/task/css/style.css
+++ b/L04_Responsive/task/css/style.css
@@ -85,6 +85,7 @@ li{
 .header_logo{
     background: url('../img/banner.jpg');
     background-size: cover;
+    width: 100%;
     height: 377px;
 }
 
@@ -233,6 +234,7 @@ footer{
     
 .header_logo{
     background: url('../img/banner.jpg') -250px 0;
+    background-size: cover;
     height: 365px;
 }
 
