--- a/L06_Preprocessors/scss/_main.scss
+++ b/L06_Preprocessors/scss/_main.scss
@@ -1,3 +1,14 @@
+$bodyBackground: #ddbc9b !default;
+$bodyColor: #000000 !default;
+$contentBackground: #ffffff !default;
+$aColor: #2e679e !default;
+$HColor: #8b3d00 !default;
+$briefBackground: #fadcba !default;
+$briefWidth: 35% !default;
+$tableColor: #e0e0e0 !default;
+$tdBackground: #ffffff !default;
+
+
 *{
     box-sizing: border-box;
     margin: 0;
