--- a/L17_DOM/css/style.css
+++ b/L17_DOM/css/style.css
@@ -1,7 +1,9 @@
-.form-class{
-	padding: 10px;
-	border: 1px solid #dddddd;
-	border-radius: 5px;
-	width: 50%;
-	background: #f7f7f7;
+.form-class {
+    margin: auto;
+    text-align: center;
+    padding: 10px;
+    border: 1px solid #dddddd;
+    border-radius: 5px;
+    width: 50%;
+    background: #f7f7f7;
 }
